--- a/homework_1_lang_jackie.Rmd
+++ b/homework_1_lang_jackie.Rmd
@@ -14,17 +14,21 @@ My github repository for my assignments can be found at this URL: https://github
 ```{r load_packages, warning=FALSE, message=FALSE}
 data("WorldCities")
 ```
+#Question 1
+There are 10 variables and 23,018 observations in the WorldCities dataset. Some of the variable names include latitude, longitude, countryRegion, regionCode, and date, among others.
 
 ```{r}
 glimpse(WorldCities)
 data("WorldCities")
 ```
+
 ```{r}
 data(WorldCities)
 Worldcities<-head(WorldCities, 200)#200 rows
 country_col<-WorldCities$country
 unique(country_col)
 ```
+#Question 2
 ```{r}
 data(WorldCities)
 region_col<-WorldCities$region
@@ -37,19 +41,6 @@ country_col<-WorldCities %>% select(country)
 ```
 
 ```{r}
-WorldCities %>% select(region) %>% head(5)
-```
-```{r}
-WorldCities %>% select(country) %>% unique() %>% head(9)
-```
-```{r}
-WorldCities %>% ggplot(aes(x=population)) + geom_histogram()
-##'stat_bin()' using bins=30' Pick better value with 'binwidth'
-```
-```{r}
-WorldCities %>% ggplot(aes(x= population)) + geom_histogram() + xlab('City Population')
-```
-```{r}
-WorldCities %>% ggplot(aes(x=population)) + geom_histogram() + xlab('City Population') + ylab('Cities') + ggtitle('Population') + theme_bw()
+WorldCities %>% select(region) %>% head(5)libreom_histogram() + xlab('City Population') + ylab('Cities') + ggtitle('Population') + theme_bw()
 ```
 
